# docschat-ai

./: README.md
backend/: .gitignore  pyproject.toml
backend/src/: app.py  auth_router.py  aws_service.py  jwt.py  qdrant.py  rag.py
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  index.css  main.jsx
frontend/src/components/: Dropbox.jsx  Expander.jsx  Footer.jsx  IndexCard.jsx  Navbar.jsx  RAGStep.jsx  RagHistoryCard.jsx  RagRecord.jsx  Seperator.jsx  Title.jsx
frontend/src/components/ui/: card.jsx  table.jsx
frontend/src/context/: authContext.jsx  ragRecordFuncContext.jsx  useAuth.js  useRAG.js
frontend/src/hooks/: useAuthActions.js
frontend/src/lib/: data.ts
frontend/src/pages/: Authpage.jsx  DashboardPage.jsx  Homepage.jsx
